--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
+    "@types/react-redux": "^7.1.12",
     "expo": "~39.0.2",
     "expo-camera": "~9.0.0",
+    "expo-image-picker": "~9.1.1",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
